--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "author": "Gary Ewan Park <gep13@gep13.co.uk>",
   "description": "A simple helpful robot for Cake",
   "dependencies": {
+    "githubot": ">= 0.0.0",
     "hubot": "^2.16.0",
     "hubot-diagnostics": "0.0.1",
     "hubot-gitter2": "^0.1.3",
     "hubot-google-images": "^0.2.3",
     "hubot-google-translate": "^0.2.0",
+    "hubot-group-alias": "^1.0.0",
     "hubot-help": "^0.1.2",
     "hubot-heroku-keepalive": "^1.0.0",
     "hubot-karma-classic": "~1.0.1",
